docs: update all documentation to use >> pipe operator
- Updated CHANGELOG.md with v0.2.0 changes
- Updated CLAUDE.md core interface example
- Updated README.md examples and descriptions
- Updated all .qmd documentation files
- Consistent usage of >> throughout docs

--- a/docs/quarto/architecture-diagrams.qmd
+++ b/docs/quarto/architecture-diagrams.qmd
@@ -90,7 +90,7 @@ graph LR
 
 **Code:**
 ```python
-pipeline = ValidateBrick() | TransformBrick() | EnrichBrick() | SaveBrick()
+pipeline = ValidateBrick() >> TransformBrick() >> EnrichBrick() >> SaveBrick()
 ```
 
 ### Branching Pattern
