--- a/docs/quarto/task-system.qmd
+++ b/docs/quarto/task-system.qmd
@@ -58,15 +58,15 @@ task dev:all                # Run all checks
 
 ::: {.callout-tip}
 ## Recommended: Use uv
-The `project:create:uv` task is the preferred method as it automatically sets up Python 3.13, creates a virtual environment, and installs dependencies.
+The `dev:scaffold:create:uv` task is the preferred method as it automatically sets up Python 3.13, creates a virtual environment, and installs dependencies.
 :::
 
 ```bash
 # Create new project with uv (recommended)
-task dist:project:create:uv NAME=my-app DIR=~/projects
+task dev:scaffold:create:uv NAME=my-app DIR=~/projects
 
 # Manual project creation
-task dist:project:create NAME=my-app DIR=~/projects
+task dev:scaffold:create NAME=my-app DIR=~/projects
 ```
 
 ### Multi-Project Development
